# poetryPractice

./: .gitignore  README.md  pyproject.toml
poetrypractice/: validator.py
tests/: test_validator.py
