[tool.poetry]
name = "poetrypractice"
version = "0.1.0"
description = ""
authors = ["James-Lu-none <jamesabcde277@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
